rs/tests/ownership_failures/unstable/implicit_move.stderr
error[E0382]: borrow of moved value: `numbers`
 --> tests/ownership_failures/unstable/implicit_move.rs:8:26
  |
3 |         let numbers = vec![1, 2, 3, 4, 5];
  |             ------- move occurs because `numbers` has type `Vec<i32>`, which does not implement the `Copy` trait
4 |
5 |         let other_numbers = numbers;
  |                             ------- value moved here
...
8 |         println!("{:?}", numbers); //~ error: borrow of moved value: `numbers`
  |                          ^^^^^^^ value borrowed here after move
  |
  = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
